@@ -4,6 +4,8 @@ TRUNK
 * moved matrices into submodels in UnivariateTwinAnalysis_MatrixRaw demo
 * added Beginners Guide to online documentation
 * mxRun() issues an error when the back-end reports a negative status code
+* named entities and free or fixed parameter names cannot be numeric values
+* constant literals are allowed inside mxAlgebra() statements, e.g. mxAlgebra(1 + 2 + 3)
 
 Release 0.1.3-776
 =============
